# aml-system

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  deploy-ec2.yml
infra/: Caddyfile
notebooks/: 00_eda.ipynb  01_train_baseline.ipynb  02_train_gnn.ipynb
src/: __init__.py  test_module.py
src/app/: README_DASHBOARD.md  streamlit_app.py  viz.py
src/eval/: __init__.py  metrics.py
src/explain/: __init__.py  gnn_explain.py  gnn_explain_cli.py  shap_cli.py  shap_tools.py
src/features/: __init__.py  graph.py  tabular.py
src/models/: anomaly.py  baseline_tabular.py  gnn.py  train_baseline_accounts.py  train_gnn_sage.py
