[metadata]
name = aml-x
version = 0.1.0
description = Anti-Money Laundering Detection & Explanation System
author = AML-X Team
author_email = team@aml-x.ai
url = https://github.com/your-org/aml-x
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    torch>=2.0.0
    torch-geometric>=2.3.0
    scikit-learn>=1.3.0
    pandas>=2.0.0
    numpy>=1.24.0
    networkx>=3.1
    plotly>=5.15.0
    shap>=0.42.0
    streamlit>=1.25.0
    pyyaml>=6.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    aml-simulate = data.simulate:main
    aml-train-baseline = models.baseline_tabular:main
    aml-train-gnn = models.gnn:main
    aml-app = app.streamlit_app:main

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,venv,.venv
ignore = E203, W503

[isort]
profile = black
line_length = 100
skip = .git,__pycache__,build,dist,venv,.venv

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*

